--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "env-cmd nodemon",
+    "node": "env-cmd node"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1077.0",
+    "axios": "^0.26.0",
     "env-cmd": "^10.1.0",
     "express": "^4.17.3"
   }
